--- a/trunk/Languages/default-no.xml
+++ b/trunk/Languages/default-no.xml
@@ -15,7 +15,7 @@
                        description="Shareaza Default Norwegian Skin File"
                        link="http://www.shareaza.com/"
                        email="contact@shareaza.com"
-                       version="2.0.2.15"
+                       version="2.0.3.8"
                        type="Language"
                        language="no"
                        prompt="Klikk her for å velge norsk som språk"
@@ -1739,9 +1739,9 @@
                <text>Endre opplastingskapasiteten, køer, blokkeringer og andre innstillinger.</text>
                <newline gap="10"/>
 
-               <link target="raza:page:CNetworksSettingsPage" format="b">Nettverk:</link>
+		<link target="raza:page:CRemoteSettingsPage" format="b">Fjernkonsoll:</link>
                <gap size="4"/>
-               <text>Velg hvordan og hvilke nettverk Shareaza skal koble seg opp til.</text>
+               <text>Sett opp Shareaza slik at du kan kjøre programmet gjennom en vanlig Internett browser.</text>
                <newline gap="10"/>
 
        </document>
